ami kichu pari na

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h4>
                 There is no exercise better for the heart than reaching down and lifting people up.
             </h4>
-            <h3>
+            <h3 class="color">
                 Donate Now
             </h3>
         </div>
@@ -36,13 +36,61 @@
     <h1> Donate Today</h1>
     <h4>Donation will help the people are needed.
         Donation is another name of self-purification.</h4>
-    <div>100tk</div>
-    <div> 200tk</div>
-    <div>500tk</div>
-    <div>1000tk</div>
-    <div>5000tk</div>
+    <section class="flexible">
+        <div>100tk</div>
 
+        <div>200tk</div>
+
+        <div> 500tk</div>
+
+        <div>1000tk</div>
+
+
+        <div>5000tk</div>
+    </section>
+    <p>Other Amount (Taka)</p>
+    <hr>
+    <h4 class="bold">Donate Now</h4>
+    <h1>Our Donate Plan</h1>
+    <h3 class=" middle">Bangladesh is now in a severe situation.Please come forward to help us.</h3>
+    <section class="flex2">
+        <div>
+            <img src="icons/food.png" alt="">
+            <h3>Food for a family</h3>
+            <p>Donate today to help get life-saving food to the children and families who need it the most. Our work is
+                100% voluntarily funded and every donation makes a difference. It only takes a minute to donate, but the
+                impact can last a lifetime.</p>
+        </div>
+    </section>
+    <section class="flex2">
+        <div>
+            <img src="icons/shelter.png" alt="">
+            <h3>Shelter for a family</h3>
+            <p>Non-tactical shelter designed to offer an economical solution for humanitarian aid in the event of a
+                natural disaster or conflict worldwide. This shelter is capable of withstanding a steady wind speed of
+                55 mph with gusts up to 65 mph, 10 psf snow load and 4” per hour rain load. The shelter is water,
+                ultraviolet, fungus, mildew, and flame resistant. The shelter is a 100% Berry Amendment compliant
+                shelter. 1-Year commercial warranty.</p>
+        </div>
+    </section>
+    <section class="flex2">
+        <div> <img src="icons/icon4.svg" alt="">
+            <h3>Education for a child</h3>
+            <p>The extreme flooding has caused heartbreaking damage across north-eastern Bangladesh putting 1.6 million
+                children at risk. UNICEF is working with government and local partners to provide emergency supplies and
+                services to those affected by floods. Children are in need, crowded in shelters for multiple days and
+                facing a high risk of drowning. Over 90% of the health facilities in the region have been inundated,
+                leaving childrens without health care, while cases of waterborne diseases continue to rise. Your
+                donation will help support children in Bangladesh during this emergency, to help them survive, and to
+                help rebuild after the floods. They need help now. </p>
+        </div>
+    </section>
 </body>
+<footer>
+    <h1 class="red">Be Humble</h1>
+    <p>I’m gonna do it. </p>
+
+</footer>
 
 
 
